python/project/slack-bot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: gts-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2025-04-15T14:28:20Z"
  generation: 1
  labels:
    resource_name: tools
    resource_type: ingress
  name: tools-hotelsuperhero-devops-bot-devops-bot
  namespace: default
  resourceVersion: "579192318"
  uid: e7086f32-88f5-45a1-b179-224e48dba6dc
spec:
  ingressClassName: tools
  rules:
  - host: devops-bot.hotelsuperhero.be
    http:
      paths:
      - backend:
          service:
            name: devops-bot
            port:
              number: 3001
        path: /.*$
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-default-toolsing-4abd45d6dd-950b3f7ba959a4b4.elb.ap-southeast-1.amazonaws.com
